working datepicker in modal

--- a/public/templates/books.html
+++ b/public/templates/books.html
@@ -8,5 +8,8 @@
 
 <modal-dialog show='modalShown' width='750px' height='60%'>
   <p>Create a goal for finishing this book!<p>
+  <datepicker date-format="longDate">
+  	<input ng-model="date" type="text"/>
+	</datepicker>
 </modal-dialog>
 
