--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,7 +1,12 @@
-<div>
-	Welcome to Reading Goal Setter
+<div class="backgroundImg">
+	<div class="wrapper">
+		<div class="header">Readable</div>	
+
+			<div class="wordWrap">
+				<h3>	Welcome to Reading Goal Setter </h3>
+				<p>This app will help you set reading goals. Sign in using your Goodreads account.</p>
+			</div>
+
+			<button class="loginButton"><a href="/auth/goodreads">Sign in with Goodreads</a></button>
+		</div>
 </div>
-
-<p>This app will help you set reading goals. Sign in using your Goodreads account.</p>
-
-<a href="/auth/goodreads">Sign in</a>
