--- a/public/templates/books.html
+++ b/public/templates/books.html
@@ -1,16 +1,24 @@
+<div class="header">Readable</div>	
+
+<a href="/logout"><button>Logout</button></a>
+
 <div class="containter book-row">
 	<div class="border" ng-repeat="data in books">
-		<img ng-click="toggleModal($index)" ng-src="{{data.book.image_url}}">
+		<img class="bookCover" ng-click="toggleModal($index)" ng-src="{{data.book.image_url}}">
 		<h2 class="book-title"> {{ data.book.title }}</h2>
-		<h5> {{ data.book.num_pages }} </h5>
+		<h3> {{ data.book.authors.author.name }} </h3>
 		
-		<modal-dialog show='modalShown[$index]' width='750px' height='60%'>
-		  <p>Create a goal for finishing this book!<p>
-		  <datepicker date-format="longDate">
-		  	<input ng-model="date" type="text" ng-change="onChange(date, data)"/>
-			</datepicker>
-			<p>You should read {{ goalPages }} pages each day!
-			<img ng-src="{{data.book.image_url}}">
+		<modal-dialog show='modalShown[$index]' width='620px' height='67%'>
+			<p class="header">Create a goal for finishing this book!<p>
+			<div class="col1">
+			  <datepicker date-format="longDate">
+			  	<input placeholder="Choose a date" ng-model="date" type="text" ng-change="onChange(date, data)"/>
+				</datepicker>
+			</div>
+			<div class="col2">
+				<p class="modalImage">You should read {{ goalPages }} pages each day!</p>
+				<img class="modalImage" ng-src="{{data.book.image_url}}">
+			</div>
 		</modal-dialog>
 
 	</div>
