--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -6,7 +6,8 @@
 				<h3>	Welcome to Reading Goal Setter </h3>
 				<p>This app will help you set reading goals. Sign in using your Goodreads account.</p>
 			</div>
-
-			<button class="loginButton"><a href="/auth/goodreads">Sign in with Goodreads</a></button>
+			<div align="center">
+				<button class="loginButton"><a href="/auth/goodreads">Sign in with Goodreads</a></button>
+			</div>
 		</div>
 </div>
