--- a/public/styles.css
+++ b/public/styles.css
@@ -17,7 +17,7 @@
 	text-align: center;
 	font-size: 75px;
 	color: #40576E;
-  padding: 100px 0;
+  padding: 75px 0;
 }
 
 .wrapper {
@@ -29,7 +29,7 @@
 }
 
 .loginButton {
-  
+  margin-top: 75px;
   padding: 20px;
 }
 
