--- a/public/styles.css
+++ b/public/styles.css
@@ -16,8 +16,12 @@
 .header {
 	text-align: center;
 	font-size: 75px;
-	color: #40576E;
   padding: 75px 0;
+}
+
+.mainHead {
+  font-size: 60px;
+  padding: 30px 0 30px 30px;
 }
 
 .wrapper {
@@ -26,6 +30,11 @@
 
 .wordWrap {
   text-align: center;
+}
+
+.logoutButton {
+  float: right;
+  margin: 60px;
 }
 
 .loginButton {
@@ -40,11 +49,11 @@ a {
 .containter {
 	display: flex;
 	flex-wrap: wrap;
+  justify-content: center;
 }
 
 .book-row {
-	/*margin: auto;*/
-	height: 100px;
+	width: 100%;
 }
 
 .book-title {
@@ -61,6 +70,17 @@ a {
   height: 350px;
   width: 250px;
 }
+/******************** Progress Bar ***********************/
+.progress { 
+  color: #40576E;
+  height: 3em;
+  i { line-height: 3.5em; }
+}
+
+.progress-bar { 
+  transition: width 1s ease-in-out; 
+}
+
 /*********************** MODAL STYLES ***********************/
 .ng-modal-overlay {
   /* A dark translucent div that covers the whole screen */
