working progress bar, except second book updates first book

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -7,7 +7,7 @@
 				<p>This app will help you set reading goals. Sign in using your Goodreads account.</p>
 			</div>
 			<div align="center">
-				<button class="loginButton"><a href="/auth/goodreads">Sign in with Goodreads</a></button>
+				<a href="/auth/goodreads"><button class="loginButton">Sign in with Goodreads</button></a>
 			</div>
 		</div>
 </div>
