--- a/public/templates/books.html
+++ b/public/templates/books.html
@@ -26,11 +26,12 @@
 <!-- Update pages Modal -->
 		<modal-dialog show='modal2Shown[$index]' width='620px' height='67%'>
 			<p>How many pages have you read?</p>
-			<input placeholder="Update Pages" ng-model="pagesRead" ng-change="onClick(pagesRead)">
+			<input placeholder="Update Pages" ng-model="pagesRead" >
+			<button ng-click="onClick(pagesRead)">Update</button>
 		</modal-dialog>
 <!-- Reading progress bar -->
 		<h4 ng-hide="!book.show"> Pages read so far:</h4>
-	  <progressbar ng-click="toggleModal2($index)" ng-hide="!book.show" animate="true" max="book.book.num_pages" value="progressValue"><i><span count-to="{{book.pagesRead}}" duration="1" count-from="{{book.pageNums}}"></span> / {{ book.pageNums }}</i></progressbar>
+	  <progressbar ng-click="toggleModal2($index)" ng-hide="!book.show" animate="true" max="book.book.num_pages" value="progressValue"><i><span count-to="{{progressValue}}" duration="1" count-from="{{book.pageNums}}"></span> / {{ book.pageNums }}</i></progressbar>
 	</div>
 </div>
 
