--- a/public/templates/books.html
+++ b/public/templates/books.html
@@ -10,13 +10,14 @@
 		<h3> {{ book.book.authors.author.name }} </h3>
 		<h4 ng-hide="!book.show"> Goal pages per day: {{ book.pages }} </h4>
 <!-- Goal Modal -->
-		<modal-dialog show='modalShown[$index]' width='620px' height='67%'>
+		<modal-dialog show='modalShown[$index]' width='620px' height='46%'>
 			<p class="modalHead">Create a goal for finishing this book!<p>
 			<div class="col1">
 <!-- Datepicker -->
 			  <nosepicker date-format="longDate">
 			  	<input placeholder="Choose a date" ng-model="date" type="text" ng-change="onChange(date, book)"/>
 				</nosepicker>
+				<input class="modalAddButton" type="submit" value="Add" ng-click="saveBook(pageNums); modalShown[$index] = !modalShown[$index]" />
 			</div>
 			<div class="col2">
 				<p class="modalImage"> {{ message }} </p>
@@ -24,7 +25,7 @@
 			</div>
 		</modal-dialog>
 <!-- Update pages Modal -->
-		<modal-dialog show='modal2Shown[$index]' width='620px' height='67%'>
+		<modal-dialog show='modal2Shown[$index]' width='620px' height='46%'>
 			<div class="top-gut" align="center">
 				<p class="modalHead">How many pages have you read?</p>
 				<input placeholder="Update Pages" ng-model="pagesRead" >
