--- a/public/styles.css
+++ b/public/styles.css
@@ -75,10 +75,31 @@ a {
   height: 350px;
   width: 250px;
 }
+
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  cursor: pointer;
+}
 /******************** Progress Bar ***********************/
 .progress { 
   color: #40576E;
   height: 3em;
+  cursor: pointer;
   i { line-height: 3.5em; }
 }
 
