fixed modal positioning

--- a/public/styles.css
+++ b/public/styles.css
@@ -114,7 +114,7 @@ a {
 
 .ng-modal-overlay {
   /* A dark translucent div that covers the whole screen */
-  position:absolute;
+  position:fixed;
   z-index:9999;
   top:0;
   left:0;
@@ -126,7 +126,7 @@ a {
 .ng-modal-dialog {
   /* A centered div above the overlay with a box shadow. */
   z-index:10000;
-  position: absolute;
+  position: fixed;
   width: 50%; /* Default */
 
   /* Center the dialog */
