--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -4,7 +4,7 @@
 
 			<div class="wordWrap">
 				<h3>	Welcome to Reading Goal Setter </h3>
-				<p>This app will help you set reading goals. Sign in using your Goodreads account.</p>
+				<p>This app will help you set and track your reading goals. Sign in using your Goodreads account.</p>
 			</div>
 			<div align="center">
 				<a href="/auth/goodreads"><button class="loginButton">Sign in with Goodreads</button></a>
