--- a/public/templates/books.html
+++ b/public/templates/books.html
@@ -8,11 +8,13 @@
 		<img class="bookCover hvr-grow" ng-click="toggleModal($index)" ng-src="{{book.book.image_url}}">
 		<h2 class="book-title"><strong>{{ book.book.title }}</strong></h2>
 		<h3> {{ book.book.authors.author.name }} </h3>
-		<h4 ng-hide="!book.show"> Goal pages per day: {{ book.pages }} </h4>
+		<h4 ng-hide="!book.show"> Goal pages per day: <strong>{{ book.pages }}</strong> </h4>
+
 <!-- Goal Modal -->
 		<modal-dialog show='modalShown[$index]' width='620px' height='67%'>
 			<p class="modalHead">Create a goal for finishing this book!<p>
 			<div class="col1">
+
 	<!-- Datepicker -->
 			  <nosepicker date-format="longDate">
 			  	<input placeholder="Choose a date" ng-model="date" type="text" ng-change="onChange(date, book)"/>
@@ -24,17 +26,19 @@
 				<img class="modalImage" ng-src="{{book.book.image_url}}">
 			</div>
 		</modal-dialog>
+
 <!-- Update pages Modal -->
 		<modal-dialog show='modal2Shown[$index]' width='620px' height='67%'>
 			<div class="top-gut" align="center">
 				<p class="modalHead">How many pages have you read?</p>
 				<input placeholder="Update Pages" ng-model="pagesRead" >
-				<button ng-click="onClick(pagesRead); modal2Shown[$index] = !modal2Shown[$index]">Update</button>
+				<button ng-click="onClick(pagesRead, book); modal2Shown[$index] = !modal2Shown[$index]">Update</button>
 			</div>
 		</modal-dialog>
+
 <!-- Reading progress bar -->
 		<h4 ng-hide="!book.show"> Pages read so far:</h4>
-	  <progressbar ng-click="toggleModal2($index)" ng-hide="!book.show" animate="true" max="book.book.num_pages" value="progressValue"><i><span count-to="{{progressValue}}" duration="1" count-from="{{book.pageNums}}"></span> / {{ book.pageNums }}</i></progressbar>
+	  <progressbar ng-click="toggleModal2($index)" ng-hide="!book.show" animate="true" max="book.book.num_pages" value="progressValue"><span count-to="{{progressValue}}" duration="1" count-from="{{book.pageNums}}"></span> / {{ book.pageNums }}</progressbar>
 	</div>
 </div>
 
